# credb

./: .gitignore  .travis.yml  .travis.yml.old  LICENSE  README.md  clang-format.sh  clang-tidy.sh  generate_python_doc.py  meson.build  meson_options.txt
bench/: bench.py  monotonic_incrementer.py  monotonic_incrementer_get.py  monotonic_incrementer_nopolicy.py  monotonic_incrementer_nopolicy_get.py  put.py  random_reads.py
ci/: install-packages.sh  run-test.sh  setup-credb.sh  setup-prereq-ext.sh  setup-prereq.sh
doc/: docparse.py  meson.build
doc/cpp/: Doxyfile.in  main.md  meson.build
doc/python/: Doxyfile.in  main.md  meson.build
doc/theme/: style.css
docker/: credb-dep.Dockerfile  credb-shell.sh  credb.Dockerfile  download_prebuilt.sh  paths.sh  run-clang-tidy.sh  run-doxygen.sh  run-server.sh  run-test.sh  setup-credb.sh  setup-dep.sh
include/credb/: Client.h  Collection.h  IsolationLevel.h  Transaction.h  Witness.h  base64.h  credb.h  defines.h  event_id.h
include/credb/ucrypto/: error.h  ucrypto.h
scripts/: clang-tidy.sh
src/client/: ClientImpl.cpp  ClientImpl.h  CollectionImpl.cpp  CollectionImpl.h  DocParser.cpp  DocParser.h  PendingBitstreamResponse.h  PendingBooleanResponse.h  PendingCallResponse.h  PendingDocumentResponse.h  PendingEventIdResponse.h  PendingFindResponse.h  PendingGetResponse.h  PendingListResponse.h  PendingMessage.cpp  PendingMessage.h  PendingPutWithoutKeyResponse.h  PendingResponse.h  PendingSetResponse.h  PendingSizeResponse.h  PendingWitnessResponse.h  TransactionCollectionImpl.cpp  TransactionCollectionImpl.h  TransactionImpl.cpp  TransactionImpl.h  ecp.cpp  key_derivation.h  meson.build  op_info.h  python_api.cpp.in  python_api_helper.h  python_converter.h
src/common/util/: EncryptionType.h  FunctionCallResult.h  Identity.h  IdentityDatabase.cpp  IdentityDatabase.h  MessageType.h  MurmurHash2.cpp  MurmurHash2.h  Mutex.cpp  Mutex.h  OperationType.h  RWLockable.h  RWLockable.inl  base64.cpp  defines.h  ecp.h  error.h  event_id_hash.h  get_heap_size_of.h  hash.h  keys.h  pair_hash.h  remote_attestation_result.h  status.h  types.h
src/enclave/: AbstractMap.h  BTree.h  Block.cpp  Block.h  Block.inl  BufferManager.cpp  BufferManager.h  BufferManager.inl  Client.cpp  Client.h  Clients.cpp  Clients.h  Collection.cpp  Collection.h  Counter.h  Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h  EncryptedIO.cpp  EncryptedIO.h  EvictionAlgorithm.h  HashMap.cpp  HashMap.h  HashMapNode.h  Index.cpp  Index.h  Ledger.cpp  Ledger.h  Ledger.inl  LocalEncryptedIO.cpp  LocalEncryptedIO.h  LockHandle.cpp  LockHandle.h  MiniThread.h  MultiMap.cpp  MultiMap.h  MultiMapNode.h  Object.cpp  Object.h  (+70 more)
src/enclave/bindings/: Collection.cpp  Collection.h  Database.cpp  Database.h  NestedTransaction.cpp  NestedTransaction.h  Object.cpp  Object.h  ObjectIterator.cpp  ObjectIterator.h  OpContext.cpp  OpContext.h  OpInfo.cpp  OpInfo.h  Transaction.cpp  Transaction.h  TransactionCollection.cpp  TransactionCollection.h
src/ledger/: Witness.cpp  witness_reader.cpp
src/server/: Attestation.cpp  Attestation.h  ClientAcceptor.cpp  ClientAcceptor.h  ClientHandler.cpp  ClientHandler.h  Disk.cpp  Disk.h  EnclaveHandle.cpp  EnclaveHandle.h  FakeEnclave.cpp  FakeEnclave.h  PeerAcceptor.cpp  PeerAcceptor.h  PeerHandler.cpp  PeerHandler.h  RemoteParties.cpp  RemoteParties.h  RemoteParty.cpp  RemoteParty.h  Server.cpp  Server.h  main.cpp  meson.build
src/ulibcrypto/: Makefile  consttime_memequal.cpp  consttime_memequal.h  init_tcrypto_lib.cpp  memset_s.cpp  memset_s.h  meson.build  se_cdefs.h  se_cpu_feature.h  se_cpu_feature_defs.h  se_tcrypto_common.h  sgx_aes_ctr.cpp  sgx_aes_gcm.cpp  sgx_cmac128.cpp  sgx_ecc256.cpp  sgx_ecc256_common.cpp  sgx_ecc256_common.h  sgx_ecc256_ecdsa.cpp  sgx_sha256.cpp  sgx_sha256_msg.cpp  tcrypto_version.cpp  util.h
test/: Basic.cpp  BufferManager.cpp  Disk.cpp  HashMap.cpp  IsolationLevels.cpp  Ledger.cpp  LockHandle.cpp  MultiMap.cpp  Order.cpp  Programs.cpp  RemoteTransaction.cpp  StringIndex.cpp  Transaction.cpp  TransactionLedger.cpp  TransactionManager.cpp  Workload.cpp  bank_test.py  basic.cpp  basic.py  call_programs.py  concurrent_call_programs.py  concurrent_remote_call.py  concurrent_remote_call_tx.py  concurrent_serverside_transactions.py  concurrent_transactions.py  debug_snapshot.py  downstream_read.py  global.h  hash_map.cpp  latency_bench.py  main.cpp  meson.build  multi_client_test.py  multi_downstream.py  multi_get.py  multi_put.py  multi_readwrite.py  multi_server.py  multi_update.py  peer_api.py  (+11 more)
test/bank-test/: accounts-policy.py  balance.py  bank.type  connect-banks  create_account.py  credit.py  link_account.py  move_money_locally.py  move_money_remotely.py  programs-policy.py  setup-banks1  setup-banks2
test/data/: add.py
