option('sgx_mode', type : 'string', value : 'simulation', description : 'Can be simulation, or prerelease')
option('encrypt_files', type : 'boolean', value : true, description : 'Should data on disk be encrypted? This should always be true for production systems')
option('always_page', type : 'boolean', value : false, description : '')
option('debug_mutex', type : 'boolean', value : false, description : 'Use the debugging version of mutex. WARNING: this may cause running out of memory!')
