ulibcrypto_cpp_files = files(
    'init_tcrypto_lib.cpp',
    'sgx_aes_ctr.cpp',
    'sgx_aes_gcm.cpp',
    'sgx_cmac128.cpp',
    'sgx_ecc256.cpp',
    'sgx_ecc256_ecdsa.cpp',
    'sgx_sha256.cpp',
    'sgx_sha256_msg.cpp',
    'tcrypto_version.cpp',
    'memset_s.cpp',
    'consttime_memequal.cpp')
